# Vibe-BPMN-studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  graph_tests.ipynb  main.py  package.json  pyproject.toml  server.js  settings.py  viewer.html
.github/workflows/: cd-docker-push.yml  cd-render-push.yml  ci-docker-build.yml  docker-image.yml  docker_hadolint.yml  pytest.yml  ruff_linter.yml
data/XMLs/: base_bpmn_diagram.xml
data/XMLs/test_schemas/: bpmn_test_schema.xml
data/bpmn_schemas/: collaboration.json  diagramm_schema.json  flow.json  flows.json  layout.json  plan.json  process.json  validation.json
data/prompts/: collaboration.yaml  diagram.yaml  flow.yaml  layout.yaml  plan.yaml  process.yaml  system.yaml
data/prompts/simple/: XML_generation.yaml  business_generation.yaml
src/: api_routes.py  get_base_diagram.py  get_example_diagram.py
src/ai_generation/: llm_client.py  promt_manager.py
src/ai_generation/bpmn_agent/: agent.py  state.py
src/ai_generation/bpmn_agent/nodes/: execution.py  (+1 more)
src/ai_generation/managers/: json_schema.py  llm_config.py  prompt.py
src/assemblers/json/: base.py  bpmn.py
src/assemblers/xml/: base_xml.py  bpmn.py  director.py
static/: index.html
static/css/: styles.css
static/js/: app.js  bot-responder.js  bpmn-controls.js  config.js  ui-manager.js
tests/: test_api_routes.py
tests/ai_generation/: test_agent.py  test_llm_client.py
tests/ai_generation/managers/: test_llm_config.py
tests/ai_generation/nodes/: test_bpmn_node.py  test_imagine_process.py  test_validate_xml.py
(+12 files in other folders)
